Fixed some broken layout on kitchen_sink demo pages.

--- a/demo/styles/app.css
+++ b/demo/styles/app.css
@@ -7,7 +7,7 @@ body {
   /*  background-color: #153A5F;*/
 }
 
-.iso7-no-active:active {
+.ioo7-no-active:active {
     background-color: #fff !important;
 }
 
