--- a/framework/css/grid.css
+++ b/framework/css/grid.css
@@ -15,7 +15,10 @@
   display: -ms-flexbox;
   display: flex;
   flex-wrap: wrap;
-  width: 100%; }
+  line-height: 1;
+  width: 100%;
+  box-sizing: border-box;
+}
 
 .row + .row {
   margin-top: -5px;
@@ -29,7 +32,10 @@
   -ms-flex: 1;
   flex: 1;
   display: block;
-  width: 100%; }
+  width: 100%;
+  line-height: 1;
+  box-sizing: border-box;
+}
 
 /* Vertically Align Columns */
 /* .row-* vertically aligns every .col in the .row */
@@ -38,21 +44,24 @@
   -ms-flex-align: start;
   -webkit-align-items: flex-start;
   -moz-align-items: flex-start;
-  align-items: flex-start; }
+  align-items: flex-start;
+}
 
 .row-bottom {
   -webkit-box-align: end;
   -ms-flex-align: end;
   -webkit-align-items: flex-end;
   -moz-align-items: flex-end;
-  align-items: flex-end; }
+  align-items: flex-end;
+}
 
 .row-center {
   -webkit-box-align: center;
   -ms-flex-align: center;
   -webkit-align-items: center;
   -moz-align-items: center;
-  align-items: center; }
+  align-items: center;
+}
 
 /* .col-* vertically aligns an individual .col */
 .col-top {
